
ergatis-v1r19b2
--------------
-fixed adjust_bsml_coordinates to install all needed files
-hmmpfam2bsml was failing to parse when match IDs were long.

ergatis-v1r20b1
--------------
-wu-blast2bsml.pl fix to properly set Sequence stub molecule type based on blast program used
-changed analysis2bsml to store ergatis version tags from an installer control file
-added gff2bsml component to installer
-targetp2bsml legacy db loader script
-added psipred component
-added hmmsearch component
-added genbank2bsml component
-added obo2chado component
-added tabula_rasa component
-added snoscan component to installer
-replaced MLDBM tied hashes with DB_Tree for performance
-reimpl of steps of bsml2fasta, cog, jaccard components to use XML::Parser for performance
-global_id_repository support added to ergatis.ini
-project_id_repository support added
-autodetection of compressed input file support added to bsml2legacydb, gap22bsml.pl, nap2bsml.pl
-repeatmasker component updated to use IdGenerator.pm
-corrected list file creation to not include .gz extensions in all components
-backupdb now compresses output
-updates to build_supercontig
-updates to bsml2chado
-updates to delete_analysis
-updates to initdb

ergatis-v1r20b2
--------------
-reverted legacy2bsml and bsml2chado components back to ergatis-v1r19b2 version

ergatis-v1r20b3
--------------
-reimpl of cog component script to use XML::Parser for performance boost

ergatis-v1r20b4
------------
-inclusion of new functionality of legacy2bsml and bsml2chado components, including new checksum strategy for database loading

ergatis-v1r20b5
--------------
-changed IdGenerator.pm to use File::NFSLock, handle sigints and support ID pooling
-changed genemark component to use new version

ergatis-v1r20b6
--------------
-BER fixes
-fixed clustalw component.  was failing when configured to run on non-cog output
-ber component now automatically extracts and prepares required extended nt database
-added mreps component